tests/ui/nll/user-annotations/dump-adt-brace-struct.stderr
error: user substs: UserSubsts { substs: [Ref(ReStatic, Uint(U32), Not)], user_self_ty: None }
  --> $DIR/dump-adt-brace-struct.rs:21:5
   |
LL |     SomeStruct::<&'static u32> { t: &22 };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

